--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,34 +1,51 @@
-"Adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"de Heus":
+  - firstname: ["Martijn", "M."]
+    url: https://www.linkedin.com/in/martijn-de-heus-b75308146/
 
-"Podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+"Psarakis":
+  - firstname: ["Kyriakos", "K."]
+    url: https://kpsarakis.github.io/
 
-"Rosen":
-  - firstname: ["Nathan", "N."]
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
+"Siachamis":
+  - firstname: ["George", "G.", "Georgios"]
+    url: https://www.wis.ewi.tudelft.nl/siachamis
 
-"Bach": 
-  - firstname: ["Johann Sebastian", "J. S."]
-    url: https://en.wikipedia.org/wiki/Johann_Sebastian_Bach
+"Visser":
+  - firstname: ["Eelco", "E."]
+    url: https://eelcovisser.org/
 
-  - firstname: ["Carl Philipp Emanuel", "C. P. E."]
-    url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
+"Zorgdrager":
+  - firstname: ["Wouter", "W."]
+    url: https://nl.linkedin.com/in/wouter-zorgdrager-a4746512a
 
-"Przibram":
-  - firstname: ["Karl"]
-    url: https://link.springer.com/article/10.1007/s00016-019-00242-z
+"Lofi":
+  - firstname: ["Christoph", "C."]
+    url: https://www.wis.ewi.tudelft.nl/lofi
 
-"Schrödinger":
-  - firstname: ["Erwin"]
-    url: https://en.wikipedia.org/wiki/Erwin_Schr%C3%B6dinger
+"Brons":
+  - firstname: ["Jerry", "J."]
+    url: https://nl.linkedin.com/in/jerry-brons-ba6226b0
 
-"Lorentz":
-  - firstname: ["Hendrik Antoon"]
-    url: https://en.wikipedia.org/wiki/Hendrik_Lorentz
+"Koutras":
+  - firstname: ["Christos", "C."]
+    url: https://ckoutras.github.io/
 
-"Planck":
-  - firstname: ["Max"]
-    url: https://en.wikipedia.org/wiki/Max_Planck
+"Katsifodimos":
+  - firstname: ["Asterios", "A."]
+    url: http://asterios.katsifodimos.com/
+
+"Fragkoulis":
+  - firstname: ["Marios", "M."]
+    url: http://mariosfragkoulis.gr/
+
+"Ionescu":
+  - firstname: ["Andra", "A."]
+    url: https://andraionescu.github.io/
+
+"Bonifati":
+  - firstname: ["Angela", "A."]
+    url: https://perso.liris.cnrs.fr/angela.bonifati/
+
+"Salvaneschi":
+  - firstname: ["Guido", "G."]
+    url: https://programming-group.com/
