add SIGMOD paper and Copenhagen coauthors

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -61,3 +61,11 @@
 "salvaneschi":
   - firstname: ["Guido", "G."]
     url: https://programming-group.com/
+
+"zhou":
+  - firstname: ["Yongluan", "Y."]
+    url: https://ylzhou.github.io/
+
+"laigner":
+  - firstname: ["Rodrigo", "R."]
+    url: https://rnlaigner.github.io/
