--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -69,3 +69,7 @@
 "laigner":
   - firstname: ["Rodrigo", "R."]
     url: https://rnlaigner.github.io/
+
+"ng":
+- firstname: ["Harald", "H."]
+  url: https://haraldng.github.io/
