--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -73,3 +73,7 @@
 "ng":
 - firstname: ["Harald", "H."]
   url: https://haraldng.github.io/
+
+"arns":
+- firstname: ["Jonathan", "J."]
+  url: https://notpeerreviewed.com/
