--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -7,7 +7,7 @@
 # bluesky_url: # your bluesky URL
 dblp_url: https://dblp.org/pid/254/2650.html # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: k.psarakis@tudelft.nl # your email address
+email: kpsarakis94@gmail.com # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
 github_username: kPsarakis # your GitHub user name
@@ -23,7 +23,7 @@ github_username: kPsarakis # your GitHub user name
 linkedin_username: kyriakos-psarakis-699843147 # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
-# orcid_id: # your ORCID ID
+orcid_id: 0000-0002-3017-5704 # your ORCID ID
 # osf_id: # your OSF ID
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
@@ -31,7 +31,7 @@ linkedin_username: kyriakos-psarakis-699843147 # your LinkedIn user name
 research_gate_profile: Kyriakos-Psarakis # your profile on ResearchGate
 #rss_icon: true # set to true to show the RSS icon
 scholar_userid: 6L9Kz3AAAAAJ # your Google Scholar ID
-# scopus_id: # your profile on Scopus
+scopus_id: 57219694054 # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
 # spotify_id: # your spotify id
 # stackoverflow_id: # your stackoverflow id
