--- a/_data/citations.yml
+++ b/_data/citations.yml
@@ -1,26 +1,26 @@
 metadata:
-  last_updated: '2025-11-09 14:30:50'
+  last_updated: '2025-12-08 08:52:01'
 papers:
   6L9Kz3AAAAAJ:u-x6o8ySG0sC:
     title: 'Valentine: Evaluating matching techniques for dataset discovery'
     year: '2021'
-    citations: 161
+    citations: 169
   6L9Kz3AAAAAJ:9yKSN-GCB0IC:
     title: Distributed Transactions on Serverless Stateful Functions
     year: '2021'
-    citations: 36
+    citations: 38
   6L9Kz3AAAAAJ:2osOgNQ5qMEC:
     title: 'Valentine in Action: Matching Tabular Data at Scale'
     year: '2021'
-    citations: 16
+    citations: 17
   6L9Kz3AAAAAJ:eQOLeE2rZwMC:
     title: 'Stateful Entities: Object-oriented Cloud Applications as Distributed Dataflows'
     year: '2024'
-    citations: 14
+    citations: 15
   6L9Kz3AAAAAJ:IjCSPb-OGe4C:
     title: Transactions Across Serverless Functions Leveraging Stateful Dataflows
     year: '2022'
-    citations: 11
+    citations: 12
   6L9Kz3AAAAAJ:roLk4NBRz8UC:
     title: Multi-label classification for automatic tag prediction in the context
       of programming challenges
@@ -57,7 +57,7 @@ papers:
   6L9Kz3AAAAAJ:_FxGoFyzp5QC:
     title: 'Topio: An Open-Source Web Platform for Trading Geospatial Data'
     year: '2023'
-    citations: 2
+    citations: 3
   6L9Kz3AAAAAJ:qjMakFHDy7sC:
     title: Holistic Schema Matching at Scale
     year: '2020'
@@ -74,7 +74,7 @@ papers:
   6L9Kz3AAAAAJ:mVmsd5A6BfQC:
     title: 'Styx: Transactional Stateful Functions on Streaming Dataflows'
     year: '2025'
-    citations: 8
+    citations: 9
   6L9Kz3AAAAAJ:dhFuZR0502QC:
     title: 'Transactional Cloud Applications: Status Quo, Challenges, and Opportunities'
     year: '2025'
@@ -82,4 +82,9 @@ papers:
   6L9Kz3AAAAAJ:L8Ckcad2t8MC:
     title: 'Styx in Action: Transactional Cloud Applications Made Easy'
     year: '2025'
+    citations: 0
+  6L9Kz3AAAAAJ:IWHjjKOFINEC:
+    title: 'Democratizing Scalable Cloud Applications: Transactional Stateful Functions
+      on Streaming Dataflows'
+    year: '2026'
     citations: 0
